[package]
name = "hnsw-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ordered-float = "4.2.0"
rand = "0.8.5"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"  # For progress bars

[[benchmark]]
name = "index_test"
path = "benchmark/index_test.rs"
