[package]
name = "hnsw-rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "index-test"  # This will be the name you use with cargo run
path = "benchmarks/index_test.rs"  # Path to your file

[[bin]]
name = "cluster-processor"
path = "src/bin/cluster_processor.rs"

[[bin]]
name = "vector-generator"
path = "src/bin/vector_generator.rs"

[dependencies]
ordered-float = "4.2.0"
rand = { version = "0.8", features = ["std"] }
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
